feat: package od_training CLI and harden config/export workflows" -m "Add pyproject-based odt entrypoint and keep scripts/odt.py as a thin wrapper without path injection. Align runtime dependencies to shared dst/od_training compatibility stack (NumPy<2, relaxed FiftyOne range, RF-DETR extras, Roboflow-compatible pins). Refactor runtime config to typed models with explicit resolution order and add utility config-init/config-show commands with secret masking. Add training preflight validators for YOLO and RF-DETR plus CLI safety flags. Make export field handling robust with explicit label/classes validation and clear errors. Expand docs and tests for CLI parity, config precedence, import side-effect safety, preflight behavior, and dataset export paths.

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,11 @@
 __pycache__/
 *.pyc
 *log.txt
+*.egg-info/
 
 # Python
 venv/
+.venv/
 env/
 .env
 config/local_config.json
@@ -15,7 +17,10 @@ config/local_config.json
 
 # Data & Models
 data/
-runs/
+runs/*
+!runs/tmp/
+runs/tmp/*
+!runs/tmp/.gitkeep
 *.pt
 *.pth
 *.engine
