--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,13 @@ scipy<1.13.0
 pydantic>=1.10,<3.0.0
 
 # Model Frameworks
+torch==2.7.1
 ultralytics>=8.0
-rfdetr[metrics]
+rfdetr[metrics,plus]
+pyparsing>=3,<4
 
 # Data & Utilities
-roboflow
+roboflow>=1.2.13,<1.3
 globox
 supervision>=0.18
 python-dotenv
@@ -17,7 +19,7 @@ python-dotenv
 clearml>=1.10
 
 # Dataset Management & Augmentation
-fiftyone>=0.23
+fiftyone>=1.11,<2.0
 albumentations>=1.3
 
 # Testing
